# semi-supervised-medical-image

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
models/: features.npy  paths.npy
notebooks/: 01_Extraction_Clustering.ipynb  02_Semi_Supervised_Approach.ipynb
src/: cnn_features.py  label_propagation.py  pseudo_labelling.py  train_eval.py
